# Ebook-Translator-Calibre-Plugin

./: .gitignore  DEVELOPMENT.md  pyproject.toml
lib/: cache.py
